# ClaimsPilot-T3

./: .env.example  .gitignore  .vercelignore  BUGS.md  HANDOFF.md  README.md  TERMINAL3_CLAIMSPILOT_CONFIRMED_BUG_REPORT.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  plan.md  render.yaml  vitest.config.ts
app/: globals.css  layout.tsx  page.tsx
app/api/claims/evaluate/: route.ts
app/api/grants/escalate/: route.ts
app/dashboard/agent/: page.tsx
app/dashboard/audit/: page.tsx
app/dashboard/docs/: page.tsx
app/dashboard/grants/: page.tsx
app/dashboard/t3-status/: page.tsx
components/: app-shell.tsx  status-badge.tsx
contracts/claims-policy/: Cargo.toml  README.md
contracts/claims-policy/src/: lib.rs  policy.rs
contracts/claims-policy/wit/: world.wit
docs/: DEMO-SCRIPT.md  DEPLOYMENT.md  JUDGE-WALKTHROUGH.md  LIVE-PROOF.md  SUBMISSION.md  TERMINAL3-INTEGRATION.md  TODO-U6-placeholder-outbound.md  VIDEO-SCRIPT.md
docs/brainstorms/: 2026-06-15-real-t3n-contract-requirements.md
docs/plans/: 2026-06-15-001-feat-real-t3n-contract-plan.md
lib/agent/: planner.test.ts  planner.ts
lib/domain/: mock-insurer.test.ts  mock-insurer.ts  policy.test.ts  policy.ts  seed.test.ts  seed.ts  store-live.test.ts  store.test.ts  store.ts  types.ts
lib/t3/: client.test.ts  client.ts  contract-state.test.ts  contract-state.ts  contract.test.ts  contract.ts  decision-source.test.ts  decision-source.ts  errors.ts  status.ts
scripts/: load-env.ts  seed.ts  t3-invoke-contract.ts  t3-register-contract.ts  verify-setup.ts
(+7 files in other folders)
